--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+* {
+  font-family: "Poppins", sans-serif;
+}
+
 .App {
+  position: relative;
+}
+
+header {
+  padding: 10px;
+  color: white;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header > * {
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.modal {
+  position: absolute;
+  top: 50vh;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%;
+  padding: 1.5rem;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+  background: linear-gradient(45deg, #0d324d, #7f5a83);
   color: white;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+.modal > * {
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.hidden {
+  display: none;
+}
+
+.btn {
+  background-color: #f3f3f3;
+  padding: 10px;
+  border: none;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+  transition: all 0.3s;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
+
+footer {
+  font-size: 14px;
+  padding: 5px;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #393939;
+  color: white;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: orangered;
+}
+
+@media only screen and (max-width: 1000px) {
+  .modal {
+    font-size: 1.2rem;
+    padding: 1rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  .btn {
+    font-size: 15px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .modal {
+    width: 60%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .modal {
+    font-size: 1.1rem;
+    width: 75%;
+  }
+
+  .btn {
+    font-size: 14px;
   }
 }
